fix #2 alignment error viewstoryPage.jsx/client

--- a/client/src/pages/view story/viewStoryPage.module.css
+++ b/client/src/pages/view story/viewStoryPage.module.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin-top: -48px;
   width: 100vw;
-  min-height: 100vh;
+  height: 110vh;
   background-color: rgb(29, 29, 29);
   display: flex;
   justify-content: center;
